--- a/index.html
+++ b/index.html
@@ -608,7 +608,9 @@
       preamble: `
         <div style="padding:10px 5px 0 5px;">
           <p style="font-size:18px;text-align:left;">
-            In this final part, you will make a series of choices. For each of the choices, please indicate which reward you would prefer: the smaller reward today, or the larger reward in the specified number of days.<br><br>
+            In this final part, you will make a series of choices.<br>
+            For each of the choices, please indicate which reward you would prefer:<br>
+            the smaller reward today, or the larger reward in the specified number of days.<br><br>
             Please answer as if these choices were real.
           </p>
         </div>
