--- a/index.html
+++ b/index.html
@@ -558,49 +558,139 @@
     var DD_ITEMS = [
       {
         name: "dd1",
-        prompt: "Would you prefer £10 today or £12 in 1 week?",
-        options: ["£10 today", "£12 in 1 week"]
+        prompt: "Would you prefer £54 today or £55 in 117 days?",
+        options: ["£54 today", "£55 in 117 days"]
       },
       {
         name: "dd2",
-        prompt: "Would you prefer £5 today or £10 in 1 month?",
-        options: ["£5 today", "£10 in 1 month"]
+        prompt: "Would you prefer £55 today or £75 in 61 days?",
+        options: ["£55 today", "£75 in 61 days"]
       },
       {
         name: "dd3",
-        prompt: "Would you prefer £20 today or £35 in 3 months?",
-        options: ["£20 today", "£35 in 3 months"]
+        prompt: "Would you prefer £19 today, or £25 in 53 days?",
+        options: ["£19 today", "£25 in 53 days"]
       },
       {
         name: "dd4",
-        prompt: "Would you prefer £15 today or £30 in 2 months?",
-        options: ["£15 today", "£30 in 2 months"]
+        prompt: "Would you prefer £31 today, or £85 in 7 days?",
+        options: ["£31 today", "£85 in 7 days?"]
       },
       {
         name: "dd5",
-        prompt: "Would you prefer £8 today or £14 in 2 weeks?",
-        options: ["£8 today", "£14 in 2 weeks"]
+        prompt: "Would you prefer £14 today, or £25 in 19 days?",
+        options: ["£14 today", "£25 in 19 days"]
       },
       {
         name: "dd6",
-        prompt: "Would you prefer £25 today or £50 in 6 months?",
-        options: ["£25 today", "£50 in 6 months"]
+        prompt: "Would you prefer £47 today, or £50 in 160 days?",
+        options: ["£47 today", "£50 in 160 days"]
       },
       {
         name: "dd7",
-        prompt: "Would you prefer £12 today or £20 in 1 month?",
-        options: ["£12 today", "£20 in 1 month"]
+        prompt: "Would you prefer £15 today, or £35 in 13 days?",
+        options: ["£15 today", "£35 in 1 month"]
       },
       {
         name: "dd8",
-        prompt: "Would you prefer £30 today or £55 in 4 months?",
-        options: ["£30 today", "£55 in 4 months"]
+        prompt: "Would you prefer £25 today, or £60 in 14 days?",
+        options: ["£25 today", "£60 in 4 months"]
       },
       {
         name: "dd9",
-        prompt: "Would you prefer £9 today or £18 in 3 weeks?",
-        options: ["£9 today", "£18 in 3 weeks"]
-      }
+        prompt: "Would you prefer £78 today, or £80 in 162 days?",
+        options: ["£78 today", "£80 in 162 days"]
+      },
+      {
+  name: "dd10",
+  prompt: "Would you prefer £40 today, or £55 in 62 days?",
+  options: ["£40 today", "£55 in 62 days"]
+},
+{
+  name: "dd11",
+  prompt: "Would you prefer £11 today, or £30 in 7 days?",
+  options: ["£11 today", "£30 in 7 days"]
+},
+{
+  name: "dd12",
+  prompt: "Would you prefer £67 today, or £75 in 119 days?",
+  options: ["£67 today", "£75 in 119 days"]
+},
+{
+  name: "dd13",
+  prompt: "Would you prefer £34 today, or £35 in 186 days?",
+  options: ["£34 today", "£35 in 186 days"]
+},
+{
+  name: "dd14",
+  prompt: "Would you prefer £27 today, or £50 in 21 days?",
+  options: ["£27 today", "£50 in 21 days"]
+},
+{
+  name: "dd15",
+  prompt: "Would you prefer £69 today, or £85 in 91 days?",
+  options: ["£69 today", "£85 in 91 days"]
+},
+{
+  name: "dd16",
+  prompt: "Would you prefer £49 today, or £60 in 89 days?",
+  options: ["£49 today", "£60 in 89 days"]
+},
+{
+  name: "dd17",
+  prompt: "Would you prefer £80 today, or £85 in 157 days?",
+  options: ["£80 today", "£85 in 157 days"]
+},
+{
+  name: "dd18",
+  prompt: "Would you prefer £24 today, or £35 in 29 days?",
+  options: ["£24 today", "£35 in 29 days"]
+},
+{
+  name: "dd19",
+  prompt: "Would you prefer £33 today, or £80 in 14 days?",
+  options: ["£33 today", "£80 in 14 days"]
+},
+{
+  name: "dd20",
+  prompt: "Would you prefer £28 today, or £30 in 179 days?",
+  options: ["£28 today", "£30 in 179 days"]
+},
+{
+  name: "dd21",
+  prompt: "Would you prefer £34 today, or £50 in 30 days?",
+  options: ["£34 today", "£50 in 30 days"]
+},
+{
+  name: "dd22",
+  prompt: "Would you prefer £25 today, or £30 in 80 days?",
+  options: ["£25 today", "£30 in 80 days"]
+},
+{
+  name: "dd23",
+  prompt: "Would you prefer £41 today, or £75 in 20 days?",
+  options: ["£41 today", "£75 in 20 days"]
+},
+{
+  name: "dd24",
+  prompt: "Would you prefer £54 today, or £60 in 111 days?",
+  options: ["£54 today", "£60 in 111 days"]
+},
+{
+  name: "dd25",
+  prompt: "Would you prefer £54 today, or £80 in 30 days?",
+  options: ["£54 today", "£80 in 30 days"]
+},
+{
+  name: "dd26",
+  prompt: "Would you prefer £22 today, or £25 in 136 days?",
+  options: ["£22 today", "£25 in 136 days"]
+},
+{
+  name: "dd27",
+  prompt: "Would you prefer £20 today, or £55 in 7 days?",
+  options: ["£20 today", "£55 in 7 days"]
+}
     ];
 
     var delay_discount_trial = {
